# aurora

cmake/: aurora_gx.cmake
include/aurora/: aurora.h  dvd.h  gfx.h
include/dolphin/: ar.h  os.h  pad.h
include/dolphin/gx/: GXAurora.h
include/dolphin/os/: OSTime.h
lib/: aurora.cpp  automation_input_policy.hpp  imgui.cpp  imgui.hpp  window.cpp  window.hpp
lib/card/: CardGciFolder.cpp
lib/dolphin/: AR.cpp
lib/dolphin/dvd/: dvd.cpp
lib/dolphin/gx/: GXTexture.cpp
lib/dolphin/os/: OSMemory.cpp  OSTime.cpp
lib/dolphin/pad/: pad.cpp
lib/gfx/: clear.cpp  common.cpp  common.hpp  depth_peek.cpp  frame_capture.cpp  frame_capture.hpp  pipeline_cache.cpp  png_io.cpp  png_io.hpp  tex_copy_conv.cpp  tex_palette_conv.cpp  texture.cpp
lib/gx/: command_processor.cpp  command_processor.hpp  gx.cpp  gx.hpp  shader.cpp
lib/rmlui/: pipeline.cpp
lib/webgpu/: gpu.cpp  gpu.hpp  gpu_cache.cpp
tests/: CMakeLists.txt  ar_state_test.cpp  card_gci_folder_test.cpp  frame_capture_test.cpp  gx_fifo_test.cpp  gx_test_common.hpp  os_time_test.cpp  os_time_test_globals.cpp  test_dvd.cpp
